* bootstrap to prepare the release